# idiomatic-rust-tut

./: Cargo.toml  README.md
src/: idioms_lib.rs  main.rs
src/data/: data.txt
src/lib/: counters.rs  file_parse.rs  into.rs  structures.rs
src/lib/base/: error.rs  lib.rs  prelude.rs
src/lib/base/utils/: direntry_froms.rs  mod.rs  pop.rs
src/lib/file_parse/: file_parse_tests.rs
src/tests/: file_parse_tests.rs
