[package]
name = "idiomatic-rust-tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"


# Our lib - 'idioms' with all packages in the 'lib' directory
[lib]
name = "idioms"
path = "src/idioms_lib.rs"
doctest = false

# Bins for running example for each added package
[[bin]]
name = "counters"
test = false

[[bin]]
name = "into"
test = false

[[bin]]
name = "file_parse"
test = false

[[bin]]
name = "time"
test = false

[[bin]]
name = "books"
test = false
